# bezier

./: CMakeLists.txt  README.md  imgui.ini  main.cpp
.cache/clangd/index/: main.cpp.361EFA98709D955E.idx  main.cpp.E33E5A3E01C2BB83.idx  utils.cpp.B0D79FBC29600E6F.idx  utils.cpp.FB9D643335D376AD.idx  utils.hpp.A4AA325220774E62.idx  utils.hpp.ECDE9C47274513F8.idx
include/: App.hpp  Texture.hpp  UIComponent.hpp  UIManager.hpp  input.hpp  utils.hpp
src/: App.cpp  Texture.cpp  UIComponent.cpp  UIManager.cpp  input.cpp  main.cpp  utils.cpp
